<?xml version="1.0"?>
<package format="2">
    <name>husky_highlevel_controller</name>
    <version>0.1.0</version>
    <description>Tests for building a controller for the Husky simulator</description>
    <maintainer email="davidvazquezgijon@gmail.com">David Vazquez</maintainer>
    <license>BSD</license>
    <author email="davidvazquezgijon@gmail.com">David Vazquez</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
</package>
